Bugfix z-index select2

--- a/Resources/public/css/components/_form.css
+++ b/Resources/public/css/components/_form.css
@@ -285,7 +285,7 @@ span.select2-selection__clear {
 }
 
 .select2-container--open {
-    z-index: 1100
+    z-index: 10100
 }
 
 select.form-control:not([size]):not([multiple]) {
